--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "firebase": "^10.11.1",
     "firebase-admin": "^12.1.0",
     "react": "^18.2.0",
@@ -19,7 +20,8 @@
     "react-router-dom": "^6.18.0",
     "react-simple-typewriter": "^5.0.1",
     "react-spring": "^9.7.3",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
