--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.8.2",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.18.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "react-spring": "^9.7.3",
     "tailwindcss": "^3.3.5",
     "xlsx": "^0.18.5"
